# solar-forecast-pinn

./: .gitignore  README.md  download_data.py  pyproject.toml  requirements.txt
reports/: baselines.md  data_quality.md
scripts/: data_quality_report.py  download_data.py  preprocess.py  run_baselines.py
src/solar_forecast/: __init__.py  baselines.py  features.py  metrics.py  physics.py  preprocess.py  splits.py  tracking.py
tests/: conftest.py  test_baselines.py  test_features.py  test_physics.py  test_preprocess.py  test_xgboost.py
